<resources>

    <string name="app_name">MemoryLeakTest</string>
    <string name="button">click</string>
    <string name="button1">EventListner noLeak</string>
    <string name="button2">Launch Location</string>
    <string name="button_load_bitmap">Load Bitmap noLeak</string>
    <string name="test_location_edit_text">test Location(rotation will cause Leakage)</string>

    <string name="button_static_activity">Leak Static Actvitity</string>
    <string name="edit_static_activity">Finish this activity will leak!</string>

    <string name="button_anony_class">Anonymous Class Actvitity</string>
    <string name="button_handler">Handler Leakage</string>
    <string name="button_thread">Thread Leakage</string>
    <string name="button_timer_task">Timer Task Leakage</string>
    <string name="edit_anony_class">Finish this activity  anonymous class will leak!</string>
    <string name="button_test_sensor">Sensor Leakage</string>
    <string name="edit_test_sensor">Finish this activity  sensor listener will leak!</string>
</resources>
