<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:stretchColumns="1">
    
    <TableRow>
  	  <Button
        android:id="@+id/button1"
		android:layout_width="100dp"
		android:layout_height="wrap_content"
		android:text="@string/button1" 
		android:layout_span="2" />
    </TableRow>
    <TableRow> <Button
        android:id="@+id/button_test_sensor"
		android:layout_width="100dp"
		android:layout_height="wrap_content"
		android:text="@string/button_test_sensor" 
		android:layout_span="2" />
    </TableRow>
    <TableRow>
  	  <Button
        android:id="@+id/button_load_bitmap"
		android:layout_width="100dp"
		android:layout_height="wrap_content"
		android:text="@string/button_load_bitmap" 
		android:layout_span="2" />
    </TableRow>
    <TableRow>
  	  <Button
        android:id="@+id/button2"
		android:layout_width="100dp"
		android:layout_height="wrap_content"
		android:text="@string/button2" 
		android:layout_span="2" />
    </TableRow>
    <TableRow> <Button
        android:id="@+id/button_static_activity"
		android:layout_width="100dp"
		android:layout_height="wrap_content"
		android:text="@string/button_static_activity" 
		android:layout_span="2" />
    </TableRow>
    <TableRow> <Button
        android:id="@+id/button_anony_class"
		android:layout_width="100dp"
		android:layout_height="wrap_content"
		android:text="@string/button_anony_class" 
		android:layout_span="2" />
    </TableRow>
</TableLayout>
