<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:stretchColumns="1">
    
    <TableRow>
   	 	<EditText
		android:id="@+id/edit_text"		
        android:text="@string/edit_anony_class"
        android:singleLine="false"
		android:layout_width="100dp"
		android:layout_height="wrap_content"/>
   	 	
	</TableRow>
	
    <TableRow>
  	  <Button
        android:id="@+id/button"
		android:layout_width="100dp"
		android:layout_height="wrap_content"
		android:text="@string/button_anony_class" 
		android:layout_span="2" />
    </TableRow>
    <TableRow>
  	  <Button
        android:id="@+id/button_handler"
		android:layout_width="100dp"
		android:layout_height="wrap_content"
		android:text="@string/button_handler" 
		android:layout_span="2" />
    </TableRow>
    <TableRow>
  	  <Button
        android:id="@+id/button_thread"
		android:layout_width="100dp"
		android:layout_height="wrap_content"
		android:text="@string/button_thread" 
		android:layout_span="2" />
    </TableRow>
    <TableRow>
  	  <Button
        android:id="@+id/button_timer_task"
		android:layout_width="100dp"
		android:layout_height="wrap_content"
		android:text="@string/button_timer_task" 
		android:layout_span="2" />
    </TableRow>
</TableLayout>
